Update .env file, Working App

--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,2 @@
 PORT = 2121
-DB_STRING = mongodb+srv://ferchodlt1971:MOMrwMMiSZkpcRbl@cluster0.ccnhhld.mongodb.net/
+DB_STRING = mongodb+srv://ferchodlt1971_db_user:xc5yqOHnRykr2KGC@cluster0.mz3pujx.mongodb.net/
